--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <title>teacozy</title>
 </head>
 <body>
@@ -14,15 +15,30 @@
         <div class="brand-logo">
             <img src="./resources/images/img-tea-cozy-logo.png" alt="brand-logo">
         </div>
-        <div class="menu">
+        <!-- desktop menu-->
+        <div class="menu" id="desktopmenu">
             <ul>
                 <li><a href="#mission">mission</a></li>
                 <li><a href="#featuredtea">featured tea</a></li>
                 <li><a href="#location">locations</a></li>
             </ul>
         </div>
+        <!-- mobile menu-->
+        <div id="mobilemenu">
+            <i class="fas fa-bars"></i>
+        </div>
     </div>
   </header>
+
+<div id="dropdownmenu">
+  <div class="menu">
+    <ul>
+        <li><a href="#mission">mission</a></li>
+        <li><a href="#featuredtea">featured tea</a></li>
+        <li><a href="#location">locations</a></li>
+    </ul>
+</div>
+</div>
 
   <main id='mission'>
       <div class="main-container">
@@ -112,6 +128,6 @@
     <p><i>copyright the tea cozy 2017.</i></p>
 </footer>
 
-  
+<script src="script.js"></script>
 </body>
 </html> 
